--- a/style.scss
+++ b/style.scss
@@ -484,6 +484,16 @@ $bgc-2: #6c757d;
                         z-index: 1;
                     }
                 }
+             @keyframes progress {
+                    0%{
+                        width: 0;
+                        opacity: 0;
+                    }
+                    100%{
+                        opacity: 1;
+                    }
+                    
+                }
 
                 .css {
                     width: 90%;
@@ -1108,8 +1118,33 @@ $bgc-2: #6c757d;
     }
 
 }
-
-@media (max-width : 920px) {
+@media (max-width: 2120px) {
+    .container-2 {
+        margin-left: auto;
+    }
+    .Nav-bar{
+        .Nav-info{
+            h3{
+                
+            line-height: 100px;
+            }
+        }
+    }
+}
+@media (max-width: 1500px) {
+    .container-2 {
+        margin-left: auto;
+    }
+    .Nav-bar{
+        .Nav-info{
+            h3{
+                
+            line-height: 100px;
+            }
+        }
+    }
+}
+@media (max-width : 1020px) {
     .Nav-bar {
         .Nav-info {
             h3 {
@@ -1287,7 +1322,7 @@ $bgc-2: #6c757d;
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 822px) {
     .Nav-bar {
         .Nav-info {
             h3 {
@@ -1846,707 +1881,3 @@ $bgc-2: #6c757d;
 }
 
 
-
-/* {
-:root {
-    --primary-color: #007bff;
-  }
-
-.main {
-    display: flex !important;
-    flex-direction: row !important;
-    background-color: pink;
-}
-
-.Nav-bar {
-    background-color:black;
-    height: 110vh !important;
-    color: white;
-    width: 25%;
-    overflow: scroll;
-    position: fixed;
-}
-.Nav-bar .image {
-    padding-top: 30px;
-    text-align: center;
-}
-.Nav-bar .image h1 {
-    text-transform: capitalize;
-    cursor: default;
-}
-.Nav-bar .image img {
-    height: 150px;
-    width: 150px;
-    border-radius: 999px;
-    border: 10px solid white;
-}
-.Nav-bar .Nav-info {
-    text-transform: capitalize;
-    text-align: center;
-}
-.Nav-bar .Nav-info h3:hover {
-    color: aquamarine;
-    cursor: default;
-    border: 1px solid aquamarine;
-    box-shadow: 2px 2px 10px white;
-}
-.Nav-bar .Nav-icons {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: -20px;
-}
-.Nav-bar .Nav-icons h3 {
-    padding-left: 20px;
-}
-.Nav-bar .Nav-icons h3:hover {
-    color: aquamarine;
-    cursor: default;
-}
-.Nav-bar .Nav-icons .dribbble {
-    height: 20px;
-    width: 20px;
-    color: wheat;
-}
-.Nav-bar .Nav-icons .dribbble:hover {
-    color: aquamarine;
-    cursor: default;
-}
-.Nav-bar .Nav-icons .manu-icon {
-    visibility: hidden;
-}
-
-.container-2 {
-    background-color: blue;
-    width: 75%;
-    margin-left: 315px;
-    margin-top: 100vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-.about-container {
-    background-color:var(--primary-color);
-    height: 150vh;
-}
-.about-container .main-about-heading {
-    width: 700px;
-}
-.about-container .main-about-heading h1 {
-    font-size: 130px;
-    position: relative;
-    left: 130px;
-    bottom: 20px;
-    text-transform: capitalize;
-    opacity: 30%;
-}
-.about-container .main-about-heading h2 {
-    font-size: 1.9rem;
-    position: relative;
-    bottom: 200px;
-    left: 290px;
-    color: aquamarine;
-}
-.about-container .main-about-heading h2:hover {
-    text-decoration: underline;
-}
-.about-container .name {
-    position: relative;
-    bottom: 150px;
-    left: 10px;
-}
-.about-container .name h1 {
-    font-size: 16px;
-    color: white;
-    position: relative;
-    left: 10px;
-}
-.about-container .name h1 span {
-    color: aquamarine;
-    font-size: 2.5rem;
-    text-transform: uppercase;
-}
-.about-container .para {
-    position: relative;
-    bottom: 150px;
-}
-.about-container .para P {
-    color: grey;
-    width: 500px;
-    text-align: justify;
-    position: relative;
-    left: 20px;
-}
-.about-container .about-detail {
-    width: 250px;
-    position: relative;
-    bottom: 400px;
-    left: 580px;
-}
-.about-container .about-detail .card {
-    text-transform: capitalize;
-    display: flex;
-    line-height: 25px;
-    border-bottom: 2px solid black;
-    width: 250px;
-}
-.about-container .about-detail .card h2 {
-    font-size: 20px;
-    color: white;
-}
-.about-container .about-detail .card h3 {
-    position: relative;
-    bottom: -4px;
-    left: 10px;
-    font-size: 15px;
-    color: white;
-}
-.about-container .about-detail .email h3 {
-    text-transform: lowercase;
-    color: aquamarine;
-}
-.about-container .about-detail button {
-    background-color: aquamarine;
-    margin-top: 30px;
-    padding: 15px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 8px aquamarine;
-}
-.about-container .ex-detail {
-    display: flex;
-    position: relative;
-    bottom: 300px;
-    left: 60px;
-    text-align: center;
-    justify-content: space-around;
-    width: 800px;
-}
-.about-container .ex-detail h1 {
-    color: white;
-    font-size: 45px;
-}
-.about-container .ex-detail h3 {
-    color: grey;
-    margin-top: -15px;
-}
-.main-service {
-    background-color:var(--primary-color);
-    height: 170vh;
-}
-.main-service .heading {
-    margin-left: 120px;
-    align-items: center;
-    text-align: center;
-    height: 215px;
-    width: 650px;
-}
-.main-service .heading h1 {
-    font-size: 10rem;
-    text-transform: uppercase;
-    opacity: 30%;
-}
-.main-service .heading h2 {
-    font-size: 4rem;
-    text-align: center;
-    position: relative;
-    bottom: 250px;
-    color: aquamarine;
-}
-.main-service .heading h2:hover {
-    text-decoration: underline;
-}
-.main-service .boxes {
-    display: flex;
-    justify-content: space-around;
-}
-.main-service .boxes .box {
-    display: flex;
-    margin: 60px;
-    width: 300px;
-    background-color: #fff;
-}
-.main-service .boxes .box .icons {
-    background-color: lightblue;
-    padding: 10px;
-    height: 70px;
-    position: relative;
-    top: 30px;
-    color: aquamarine;
-}
-.main-service .boxes .box .text {
-    position: relative;
-    top: 8px;
-    line-height: 20px;
-    margin: 10px;
-}
-.main-service .boxes .box .text h1 {
-    font-size: 1.3rem;
-    position: relative;
-    top: 2px;
-    color: white;
-    width: 200px;
-    opacity: 100%;
-}
-.main-service .boxes .box .text h1:hover {
-    color: aquamarine;
-}
-.main-service .boxes .box .text p {
-    width: 300px;
-    align-items: center;
-    width: 200px;
-    line-height: 15px;
-    font-size: 13px;
-    color: lightblue;
-}
-.main-summary {
-    height: 370vh;
-    width: 960px;
-    background-color: lightblue;
-}
-.main-summary .main-heading {
-    align-items: center;
-    text-align: center;
-}
-.main-summary .main-heading h1 {
-    color: bgc-2;
-    font-size: 10rem;
-    text-transform: uppercase;
-    opacity: 20%;
-    text-align: center;
-    position: relative;
-    bottom: 100px;
-}
-.main-summary .main-heading h3 {
-    font-size: 4.5rem;
-    text-transform: capitalize;
-    position: relative;
-    bottom: 360px;
-    text-align: center;
-    color: white;
-}
-.main-summary .info {
-    display: flex;
-    position: relative;
-    bottom: 300px;
-    justify-content: space-around;
-}
-.main-summary .info .row {
-    width: 420px;
-    height: 200px;
-}
-.main-summary .info .row .boxes-heading {
-    text-transform: capitalize;
-    color: white;
-    font-size: 1.8rem;
-    text-align: left;
-}
-.main-summary .info .row .box {
-    border: 2px solid aquamarine;
-    align-items: flex-start;
-    text-align: left;
-    margin-top: 50px;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 3px 3px 10px aquamarine;
-    background-color: black;
-}
-.main-summary .info .row .box .time {
-    border: 2px solid aquamarine;
-    background-color: aquamarine;
-    width: 150px;
-    text-align: center;
-    color: white;
-    border-radius: 10px;
-    opacity: 90%;
-}
-.main-summary .info .row .box .heading {
-    color: white;
-}
-.main-summary .info .row .box .para-heading {
-    color: aquamarine;
-}
-.main-summary .info .row .box p {
-    color: var(--secondery-color);
-}
-.main-summary .container {
-    position: relative;
-    top: 540px;
-    left: 80px;
-    width: 800px;
-}
-.main-summary .container .title-text {
-    color: white;
-    text-align: center;
-    font-size: 5rem;
-    text-transform: capitalize;
-    letter-spacing: 3px;
-    text-shadow: 2px 2px 10px aquamarine;
-}
-.main-summary .container .skill-box {
-    line-height: 50px;
-    width: 100%;
-    margin: 25px 0;
-}
-.main-summary .container .skill-box .title {
-    display: block;
-    text-align: left;
-    font-size: 18px;
-    font-weight: 600;
-    color: white;
-}
-.main-summary .container .skill-box .skill-bar {
-    height: 8px;
-    width: 100%;
-    border-radius: 6px;
-    margin-top: 6px;
-    background-color: b2gc-;
-}
-.main-summary .container .skill-box .skill-bar .skill-per {
-    position: relative;
-    display: block;
-    height: 100%;
-    width: 95%;
-    border-radius: 6px;
-    background: aquamarine;
-    animation: progress 0.4s ease-in-out forwards;
-    opacity: 0;
-}
-.main-summary .container .skill-box .skill-bar .skill-per .tooltip {
-    position: absolute;
-    right: -14px;
-    top: -28px;
-    font-size: 9px;
-    font-weight: 500;
-    color: white;
-    padding: 2px 6px;
-    border-radius: 10px;
-    background: aquamarine;
-    z-index: 1;
-}
-.main-summary .container .skill-box .skill-bar .css {
-    width: 90%;
-    animation-delay: 0.1s;
-}
-.main-summary .container .skill-box .skill-bar .JS {
-    width: 75%;
-    animation-delay: 0.2s;
-}
-.main-summary .container .skill-box .skill-bar .R-JS {
-    width: 75%;
-    animation-delay: 0.3s;
-}
-.main-summary .container .skill-box .skill-bar .N-JS {
-    width: 85%;
-    animation-delay: 0.3s;
-}
-.main-b-port {
-    background-color: bgc-2;
-    height: 300vh;
-}
-.main-b-port .main-heading {
-    text-align: center;
-}
-.main-b-port .main-heading h1 {
-    font-size: 10rem;
-    position: relative;
-    bottom: 100px;
-    color: lightblue;
-    opacity: 40%;
-    text-transform: uppercase;
-}
-.main-b-port .main-heading h2 {
-    font-size: 3rem;
-    text-transform: capitalize;
-    position: relative;
-    bottom: 340px;
-    left: -40px;
-}
-.main-b-port .main-heading h2:hover {
-    color: aquamarine;
-    cursor: default;
-    text-decoration: underline;
-}
-.main-b-port .main-image-b {
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-}
-.main-b-port .main-image-b div img {
-    height: 260px;
-    width: 260px;
-}
-.main-b-port .main-image-b div h2 {
-    position: relative;
-    bottom: 110px;
-    color: white;
-    text-transform: capitalize;
-    text-shadow: 2px 2px 5px white;
-}
-.main-b-port .cent-img-l {
-    line-height: 0px;
-}
-.main-b-port .cent-img-l div {
-    margin-top: 130px;
-}
-.main-b-port .s-line {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: normal;
-    position: relative;
-    bottom: 90px;
-}
-.main-b-port .s-line h2 {
-    margin-left: 60px;
-}
-.main-b-port .s-line h2:hover {
-    color: aquamarine;
-    cursor: default;
-    text-decoration: underline;
-}
-.main-testi {
-    height: 150vh;
-    background-color: lightblue;
-}
-.main-testi .heading {
-    text-align: center;
-}
-.main-testi .heading h1 {
-    font-size: 8rem;
-    position: relative;
-    bottom: 70px;
-    text-transform: uppercase;
-    opacity: 30%;
-}
-.main-testi .heading h2 {
-    font-size: 2rem;
-    position: relative;
-    bottom: 255px;
-    color: white;
-    text-transform: capitalize;
-}
-.main-testi .slider-box {
-    width: 890px;
-    margin-left: 30px;
-    justify-content: space-between;
-    align-content: space-around;
-}
-.main-testi .c-cards {
-    background-color: black;
-    width: 350px !important;
-    height: 300px;
-    border-radius: 20px;
-    padding: 36px;
-    margin: 0 0 0 10px;
-}
-.main-testi .c-cards .name-logo {
-    display: flex;
-}
-.main-testi .c-cards .name-logo img {
-    width: 100px;
-    height: 100px;
-    border-radius: 900px;
-}
-.main-testi .c-cards .name-logo .name {
-    position: relative;
-    bottom: -5px;
-    left: 12px;
-    line-height: 12px;
-    color: white;
-}
-.main-testi .c-cards .name-logo .name h3 {
-    color: bgc-2;
-}
-.main-testi .c-cards .para .text-para {
-    justify-content: center;
-    text-align: justify;
-    color: white;
-    font-size: 15px;
-    font-weight: bolder;
-}
-.main-testi .c2 {
-    background-color: bgc-2;
-}
-.main-testi .c2 .name-logo .name h3 {
-    color: black;
-}
-.main-testi .c3 {
-    background-color: black;
-}
-.main-testi .c4 {
-    background-color: bgc-2;
-}
-.main-testi .c4 .name-logo .name h3 {
-    color: black;
-}
-.main-testi .c5 {
-    background-color: black;
-}
-.main-testi .c6 {
-    background-color: bgc-2;
-}
-.main-testi .c6 .name-logo .name h3 {
-    color: black;
-}
-.main-contact {
-    background-color: bgc-2;
-    height: 159vh;
-}
-.main-contact .heading {
-    text-align: center;
-}
-.main-contact .heading .main-heading {
-    font-size: 11rem;
-    text-transform: uppercase;
-    opacity: 20%;
-    position: relative;
-    bottom: 120px;
-}
-.main-contact .heading .small-heading {
-    font-size: 3rem;
-    color: white;
-    position: relative;
-    bottom: 370px;
-}
-.main-contact .detail-box {
-    display: flex;
-}
-.main-contact .detail-box .adress-phone {
-    position: relative;
-    bottom: 280px;
-    color: white;
-    text-align: left;
-    margin-left: 12px;
-}
-.main-contact .detail-box .adress-phone .heading-Add {
-    text-transform: uppercase;
-}
-.main-contact .detail-box .adress-phone .ph-email .ph-e {
-    position: relative;
-    bottom: 30px;
-}
-.main-contact .detail-box .adress-phone .ph-email .ph-e .phone-num {
-    display: flex;
-    margin-bottom: -10px;
-    color: white;
-}
-.main-contact .detail-box .adress-phone .ph-email .ph-e .phone-num .p-icon {
-    color: aquamarine;
-    position: relative;
-    bottom: 4px;
-    font-size: 1rem;
-    margin-right: 5px;
-}
-.main-contact .detail-box .adress-phone .ph-email .ph-e .email {
-    margin-bottom: 50px !important;
-    display: flex;
-    color: white;
-    margin-right: 10px;
-    position: relative;
-    bottom: 30px;
-}
-.main-contact .detail-box .adress-phone .ph-email .ph-e .email .e-icon {
-    color: aquamarine;
-    font-size: 1rem;
-}
-.main-contact .detail-box .adress-phone .icons {
-    display: flex;
-    justify-content: space-around;
-    color: black;
-    opacity: 60%;
-    margin-top: 20px;
-}
-.main-contact .detail-box .adress-phone .icons h4:hover {
-    color: aquamarine;
-}
-.main-contact .detail-box .contact-form {
-    position: relative;
-    bottom: 280px;
-}
-.main-contact .detail-box .contact-form h1 {
-    text-align: left;
-    margin-left: 35px;
-    text-transform: uppercase;
-    color: white;
-}
-.main-contact .detail-box .contact-form .inputs {
-    display: flex;
-}
-.main-contact .detail-box .contact-form .inputs input {
-    width: 300px;
-    height: 40px;
-    margin-left: 35px;
-    font-size: 20px;
-    border-radius: 10px;
-    border: 0px;
-}
-.main-contact .detail-box .contact-form .inputs input::placeholder {
-    font-size: 16px;
-    text-transform: capitalize;
-    padding-left: 20px;
-}
-.main-contact .detail-box .contact-form .inputs input:hover {
-    border: 2px aquamarine solid;
-    box-shadow: 2px 2px 10px aquamarine;
-}
-.main-contact .detail-box .contact-form .inputs input:focus {
-    outline: none;
-    box-shadow: 2px 2px 10px aquamarine;
-    border: 2px solid aquamarine;
-}
-.main-contact .detail-box .contact-form .text-area {
-    margin: 30px 0 0 35px;
-}
-.main-contact .detail-box .contact-form .text-area textarea {
-    padding: 10px;
-    width: 635px;
-    font-size: 18px;
-    border-radius: 10px;
-}
-.main-contact .detail-box .contact-form .text-area textarea::placeholder {
-    font-size: 16px;
-    text-transform: capitalize;
-}
-.main-contact .detail-box .contact-form .text-area textarea:hover {
-    border: 2px aquamarine solid;
-    box-shadow: 2px 2px 10px aquamarine;
-}
-.main-contact .detail-box .contact-form .text-area textarea:focus {
-    outline: none;
-    box-shadow: 2px 2px 10px aquamarine;
-    border: 2px solid aquamarine;
-}
-.main-contact .detail-box .contact-form button {
-    margin-top: 30px;
-    width: 170px;
-    height: 50px;
-    font-size: 18px;
-    border-radius: 30px;
-    text-transform: capitalize;
-    box-shadow: 2px 2px 10px black;
-    background-color: aquamarine;
-    opacity: 1;
-    transition: opacity 0.2s ease-in-out;
-}
-.main-contact .detail-box .contact-form button:hover {
-    cursor: pointer;
-    opacity: 0.8;
-}
-.main-footer-box {
-    background-color: var(--secondery-color);
-    height: 130px;
-    display: flex;
-    color: white;
-    justify-content: space-around;
-    font-size: 17px;
-    padding-top: 30px;
-}
-.main-footer-box .c-right .c-r-i {
-    position: relative;
-    top: 3px;
-}
-.main-footer-box .term {
-    position: relative;
-    left: 110px;
-}
-}*/
